unpackaged/main/default/objects/icAgentConsole__incAgentConfiguration__c/icAgentConsole__incAgentConfiguration__c.object-meta.xml
<CustomObject>
    <label>Salesforce Agent Settings</label>
    <nameField>
        <label>Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salesforce Agent Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>