unpackaged/main/default/objects/icAgentConsole__incAgentConfiguration__c/fields/icAgentConsole__Agent_Sync_Available__c.field-meta.xml
<CustomField>
    <fullName>icAgentConsole__Agent_Sync_Available__c</fullName>
    <label>Agent Sync Available</label>
    <length>255</length>
    <type>Text</type>
</CustomField>