unpackaged/main/default/objects/icAgentConsole__incAgentConfiguration__c/fields/icAgentConsole__Always_Create_New_Task__c.field-meta.xml
<CustomField>
    <fullName>icAgentConsole__Always_Create_New_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set this property to always create new activity from inContact agent console app, after call is disconnected</description>
    <label>Always Create New Task</label>
    <type>Checkbox</type>
</CustomField>