unpackaged/main/default/objects/icAgentConsole__incAgentConfiguration__c/fields/icAgentConsole__Configurable_Search__c.field-meta.xml
<CustomField>
    <fullName>icAgentConsole__Configurable_Search__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Configurable Search</label>
    <type>Checkbox</type>
</CustomField>