unpackaged/main/default/objects/icAgentConsole__incAgentConfiguration__c/fields/icAgentConsole__CreateTask__c.field-meta.xml
<CustomField>
    <fullName>icAgentConsole__CreateTask__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Set this property to create activities from inContact agent console app, after the contact is disconnected</inlineHelpText>
    <label>Create Task</label>
    <type>Checkbox</type>
</CustomField>