unpackaged/main/default/objects/icAgentConsole__incAgentConfiguration__c/fields/icAgentConsole__CreateTask_Refused__c.field-meta.xml
<CustomField>
    <fullName>icAgentConsole__CreateTask_Refused__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Set this to create tasks for refused contacts too.</description>
    <label>Create Task For Refused Contacts</label>
    <type>Checkbox</type>
</CustomField>