unpackaged/main/default/objects/icAgentConsole__incAgentConfiguration__c/fields/icAgentConsole__EntityMappingType__c.field-meta.xml
<CustomField>
    <fullName>icAgentConsole__EntityMappingType__c</fullName>
    <inlineHelpText>To Hold the configured Entity Mappings for Who and What Fields value</inlineHelpText>
    <label>Entity Mapping Type</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>