unpackaged/main/default/objects/icAgentConsole__incAgentConfiguration__c/fields/icAgentConsole__PopupTask__c.field-meta.xml
<CustomField>
    <fullName>icAgentConsole__PopupTask__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Set this property to pop an activity from inContact agent console app, after call is disconnected</inlineHelpText>
    <label>Popup Task</label>
    <type>Checkbox</type>
</CustomField>