unpackaged/main/default/objects/icAgentConsole__incAgentConfiguration__c/fields/icAgentConsole__Presence_Master__c.field-meta.xml
<CustomField>
    <fullName>icAgentConsole__Presence_Master__c</fullName>
    <label>Presence Master</label>
    <length>255</length>
    <type>Text</type>
</CustomField>