unpackaged/main/default/objects/icAgentConsole__incAgentConfiguration__c/fields/icAgentConsole__ProfileId__c.field-meta.xml
<CustomField>
    <fullName>icAgentConsole__ProfileId__c</fullName>
    <description>Salesforce profile Id to which this configuration is applicable</description>
    <label>Profile Id</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>