unpackaged/main/default/objects/icAgentConsole__incAgentConfiguration__c/fields/icAgentConsole__StoreScriptVariables__c.field-meta.xml
<CustomField>
    <fullName>icAgentConsole__StoreScriptVariables__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set this property to store the inContact script variables in Salesforce user object custom field, when the contact is in progress.</inlineHelpText>
    <label>Store Script Variables</label>
    <type>Checkbox</type>
</CustomField>