unpackaged/main/default/objects/icAgentConsole__incAgentConfiguration__c/listViews/icAgentConsole__All.listView-meta.xml
<ListView>
    <fullName>icAgentConsole__All</fullName>
    <columns>NAME</columns>
    <columns>icAgentConsole__ProfileId__c</columns>
    <columns>icAgentConsole__CreateTask__c</columns>
    <columns>icAgentConsole__PopupTask__c</columns>
    <columns>icAgentConsole__StoreScriptVariables__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>